# todo-backend

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/app/: settings.py
src/todo_django/: manage.py
src/todo_django/app/: settings.py  urls.py
src/todo_django/todo/: admin.py  apps.py  models.py
src/todo_django/todo/api/: filters.py  serializers.py  urls.py  views.py
src/todo_django/todo/management/commands/: retry_db.py
src/todo_django/todo/migrations/: 0001_initial.py  0002_alter_item_category.py
